   player_name_spaces option is off. Suggested by Paige. [MG]
 * Removed the last traces of the 'events' help-style command. Noone ever
   uses it, and we removed the helpfiles for it ages ago when the Event 
   System was added, anyway. [MG]
 * Updated the README for adding help-style commands, with clearer examples.
   Requested by AnnePearn. [MG]
   
Functions:
 * delete(), replace() and insert() have been renamed to strdelete(), 
   lreplace() and linsert(), respectively, for clarity and conformity. The
   original names remain as aliases. [MG]
 * moniker(<object>) returns an objects monikered name. [MUX] [MG]
 * mapsql() only stored 10 columns, instead of the advertised 30. Reported
   by Mercutio. [MG]
 * fn() now takes an <obj>/ prefix to its first arg, to evaluate the built-in
   function as <obj>. Useful when overriding side-effect functions. [MG]
 * r() now takes two arguments, allowing it to return the stack (%0-%9),
   itext() and stext() values, as well as q-registers(). [MG]
 * Mortals can now use playermem() and objmem() on their own objects.
   Suggested by Paige. [MG]
 * ljust() and rjust() now take an optional <trunc?> arg which, if true,
   causes strings already longer than <len> to be truncated. Suggested by
   many people over the years, most recently Eratl and Quasar. [MG]

Version 1.8.5 patchlevel 4                                 Mar 17, 2013

Major changes:
 * The player_name_len @config option is now the maximum length of a player
   name, instead of the maximum length+1, because doing it that way was
   rather silly. You may wish to lower yours by 1 now to compensate.
   Suggested by Mercutio. [MG]
 * Having unescaped commas in the final arg of a function call is now
   deprecated, and will eventually become illegal. Any existing code which
   does this will spam you with a warning until you change it. [MG]
 * The stack (%0-%9) can now hold up to 30 arguments, with the additional 20