@@ -118,6 +118,7 @@ ATTR attr[] = {
    NULL_CHUNK_REFERENCE, 0, NULL},
   {"MAILFORWARDLIST", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0,
    NULL},
+  {"MAILQUOTA", AF_NOPROG | AF_NOCOPY | AF_LOCKED | AF_WIZARD, NULL_CHUNK_REFERENCE, 0, NULL},
   {"MAILSIGNATURE", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
   {"MONIKER", AF_NOPROG | AF_VISUAL | AF_WIZARD | AF_LOCKED, NULL_CHUNK_REFERENCE, 0, NULL},
   {"MOVE", AF_NOPROG | AF_PREFIXMATCH, NULL_CHUNK_REFERENCE, 0, NULL},
